# PocketPal2Chinese

./: App.tsx  jest.config.js  package.json
.github/workflows/: ci.yml
__mocks__/stores/: modelStore.ts
android/app/: build.gradle
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/jni/src/: hardware_info.cpp
e2e/baselines/benchmark/: COVERAGE.md  README.md  SWEEP-PLAN.md  poco-myron.json  poco-x7-klee.json  samsung-s23.json
e2e/fixtures/: benchmark-models.ts
e2e/helpers/: bench-runner.ts
e2e/pages/: ChatPage.ts
e2e/scripts/: benchmark-compare.ts  build-bench-config.ts  merge-bench-reports.ts  migrate-baseline-v1-to-v1_1.ts
e2e/specs/features/: language.spec.ts  remote-server.spec.ts
ios/PocketPal/: HardwareInfoModule.mm
ios/PocketPal.xcodeproj/: project.pbxproj
jest/: setup.ts
scripts/: sync-weblate.js
scripts/__tests__/: benchmark-compare.test.ts  build-bench-config.test.ts  logSignals.test.ts  merge-bench-reports.test.ts  migrate-baseline-v1-to-v1_1.test.ts  validate-l10n.test.js
src/__automation__/: benchParams.ts  logSignals.ts
src/__automation__/screens/: BenchmarkRunnerScreen.tsx
src/components/ChatView/: ChatView.tsx
src/components/CompletionSettings/: CompletionSettings.tsx
src/components/DynamicParameters/: DynamicComboboxField.tsx  DynamicParameterForm.tsx  index.ts
src/components/SidebarContent/: SidebarContent.tsx
src/screens/: index.ts
src/specs/: NativeHardwareInfo.ts
src/store/: ModelStore.ts  index.ts
src/utils/: index.ts  navigationConstants.ts  translateUtils.ts
(+47 files in other folders)
